@@ -1,3 +1,6 @@
+2013-01-22 Graeme Gott <graeme@gottcode.org>
+	* Use language of wordlist in dictionary.
+
 2013-01-20 Graeme Gott <graeme@gottcode.org>
 	* Replace English wordlist.
 
